Added model tbtrnshist

--- a/models/japan_dcl/jpndclitg_integration/itg/_jpndclitg_integration__itg.yml
+++ b/models/japan_dcl/jpndclitg_integration/itg/_jpndclitg_integration__itg.yml
@@ -1,6 +1,11 @@
 version: 2
 
 models:
+  - name: jpndclitg_integration__tbtrnshist
+    config:
+      alias: tbtrnshist
+      tags: ["jp_m_dcl_itg","transformation"]
+
   - name: jpndclitg_integration__rakutenorderdetail
     config:
       alias: rakutenorderdetail
