--- a/models/japan_dcl/jpndclitg_integration/itg/_sources_jpndclitg_integration__itg.yml
+++ b/models/japan_dcl/jpndclitg_integration/itg/_sources_jpndclitg_integration__itg.yml
@@ -10,6 +10,7 @@ sources:
       identifier: false
     
     tables:
+      - name: tbtrnshist
       - name: mykokya
       - name: ssmthsalhephedda
       - name: rakutenorderdetail
