--- a/models/india/inditg_integration/lidar/_sources_inditg_integration__lidar.yml
+++ b/models/india/inditg_integration/lidar/_sources_inditg_integration__lidar.yml
@@ -8,4 +8,14 @@ sources:
       identifier: false
     tables:
     - name: edw_rpt_schemeutilize_cube_2020_2021
+  
+  - name: mds_access
+    database: "{{ env_var('DBT_ENV_CORE_DB') }}"
+    schema: mds_access
+    quoting:
+      database: false
+      schema: false
+      identifier: false
+    tables:
+    - name: mds_lkp_brand_hierarchy
       
