country lookup view created

--- a/models/india/inditg_integration/lidar/_sources_inditg_integration__lidar.yml
+++ b/models/india/inditg_integration/lidar/_sources_inditg_integration__lidar.yml
@@ -10,7 +10,7 @@ sources:
     - name: edw_rpt_schemeutilize_cube_2020_2021
   
   - name: mds_access
-    database: "{{ env_var('DBT_ENV_CORE_DB') }}"
+    database: "{{ env_var('DBT_ENV_CDL_DB') }}"
     schema: mds_access
     quoting:
       database: false
@@ -18,4 +18,5 @@ sources:
       identifier: false
     tables:
     - name: mds_lkp_brand_hierarchy
+    - name: mds_lkp_country_hierarchy
       
