--- a/models/indonesia/idnitg_integration/distributor/_sources_idnitg_integration__distributor.yml
+++ b/models/indonesia/idnitg_integration/distributor/_sources_idnitg_integration__distributor.yml
@@ -78,7 +78,7 @@ sources:
                 store_failures: true
                 schema: idnwks_integration
                 severity: error
-    - name: sdl_mds_id_ref_province_adftemp
+    - name: sdl_mds_id_ref_province
       tags: ["id_mds_itg_load","ingestion"]
       tests:
           - test_null__ff:
