--- a/models/north_asia/ntaitg_integration/pos/_sources_ntaitg_integration__pos.yml
+++ b/models/north_asia/ntaitg_integration/pos/_sources_ntaitg_integration__pos.yml
@@ -306,6 +306,8 @@ sources:
         tags: ["j_kr_sales_target_am_brand_wrapper","transformation"]
       - name: sdl_kr_fert_material_fact
         tags: ["j_kr_fert_material_wrapper","transformation"]
+      - name: sdl_tw_pos_amart_inventory
+      - name: sdl_tw_pos_amart_purchase
 
   - name: ntaitg_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
@@ -325,6 +327,7 @@ sources:
       - name: itg_pos_str_sls_grp_map
       - name: itg_pos_prom_prc_map_temp
       - name: itg_pos_str_cd_sold_to_map_temp
+      
 
   - name: bwa_access
     database: "{{ env_var('DBT_ENV_CDL_DB') }}"
