--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,6 +5,8 @@
 name: 'DNA_CORE_ASP'
 version: '1.0.0'
 config-version: 2
+flags:
+  state_modified_compare_more_unrendered_values: True
 
 # This setting configures which "profile" dbt uses for this project.
 profile: 'default'
