--- a/models/indonesia/idnitg_integration/distributor/_idnitg_integration__distributor.yml
+++ b/models/indonesia/idnitg_integration/distributor/_idnitg_integration__distributor.yml
@@ -25,6 +25,10 @@ models:
     config:
       alias: itg_mds_id_distributor_group_ingest_include
       tags: ["id_mds_itg_load","ingestion"]
+  - name: idnitg_integration__itg_customerpl_segmentation_dim
+    config:
+      alias: itg_customerpl_segmentation_dim
+      tags: ["id_mds_itg_load","ingestion"]	        
   - name: idnitg_integration__itg_distributor_customer_dim
     config:
       alias: itg_distributor_customer_dim
