--- a/models/philippines/phlitg_integration/pos/_phlitg_integration__pos.yml
+++ b/models/philippines/phlitg_integration/pos/_phlitg_integration__pos.yml
@@ -46,3 +46,9 @@ models:
     config:
       alias: itg_ph_pricelist
       tags: ["ph_pos_inactive","ingestion"]
+
+  - name: phlitg_integration__sdl_raw_ph_pos_puregold_ph
+    config:
+      alias: sdl_raw_ph_pos_puregold_ph
+      tags: ["ph_pos","ingestion"]
+
