--- a/models/indonesia/idnitg_integration/distributor/_sources_idnitg_integration__distributor.yml
+++ b/models/indonesia/idnitg_integration/distributor/_sources_idnitg_integration__distributor.yml
@@ -26,18 +26,18 @@ sources:
                 store_failures: true
                 schema: idnwks_integration
                 severity: error
-    - name: sdl_mds_id_lav_customer_hierarchy_adftemp
+    - name: sdl_mds_id_lav_customer_hierarchy
       tags: ["id_mds_itg_load","ingestion"]
       tests:
           - test_null__ff:
-              not_null_columns: ["code"]
+              not_null_columns: ["customer_id"]
               name: TRATBL_sdl_mds_id_lav_customer_hierarchy__null_test
               config:
                 store_failures: true
                 schema: idnwks_integration
                 severity: error
           - test_duplicate__ff:
-              group_by_columns: ["code","effective_from"]
+              group_by_columns: ["customer_id","effective_from"]
               name: TRATBL_sdl_mds_id_lav_customer_hierarchy__duplicate_test
               config:
                 store_failures: true
@@ -82,14 +82,14 @@ sources:
       tags: ["id_mds_itg_load","ingestion"]
       tests:
           - test_null__ff:
-              not_null_columns: ["code"]
+              not_null_columns: ["prov_id"]
               name: TRATBL_sdl_mds_id_ref_province__null_test
               config:
                 store_failures: true
                 schema: idnwks_integration
                 severity: error
           - test_duplicate__ff:
-              group_by_columns: ["code"]
+              group_by_columns: ["prov_id"]
               name: TRATBL_sdl_mds_id_ref_province__duplicate_test
               config:
                 store_failures: true
@@ -131,7 +131,8 @@ sources:
                 store_failures: true
                 schema: idnwks_integration
                 severity: error
-
+    - name: sdl_mds_id_ref_customerpl_segmentation
+      tags: ["id_mds_itg_load","ingestion"]
     - name: sdl_mds_id_distributor_customer_update_adftemp
       tags: ["id_mds_sdl_itg_load_dist_cust_dim","ingestion"]
       tests:
