--- a/models/philippines/phledw_integration/rose_pharmacy/_phledw_integration__rose_pharmacy_details.yml
+++ b/models/philippines/phledw_integration/rose_pharmacy/_phledw_integration__rose_pharmacy_details.yml
@@ -29,5 +29,5 @@ models:
           failure_reason: "'missing product information data compared with master file: item_cd'"
           name: TRATBL_sdl_ph_pos_rosepharma_product__lookup_test
           config:
-            store_failures: true
+            store_failures: false
             schema: phlwks_integration                              
