Updated ITG_CUSTPL_EXCP_CTRL to TEMP

--- a/models/asp_regional/aspitg_integration/copa/view/_sources_aspitg_integration__exceptions.yml
+++ b/models/asp_regional/aspitg_integration/copa/view/_sources_aspitg_integration__exceptions.yml
@@ -9,4 +9,4 @@ sources:
       schema: false
       identifier: false
     tables:
-      - name: itg_custpl_excp_ctrl
+      - name: itg_custpl_excp_ctrl_temp
