--- a/models/asp_regional/aspedw_integration/copa/_aspedw_integration__copa.yml
+++ b/models/asp_regional/aspedw_integration/copa/_aspedw_integration__copa.yml
@@ -3,3 +3,7 @@ models:
     config: 
       alias: edw_rpt_copa_customergp_agg
       tags: ["j_ap_dna_datamart_refresh_etl_framework_customer_pl","transformation"]
+  - name: aspedw_integration__edw_rpt_customerpl_exceptions
+    config: 
+      alias: edw_rpt_customerpl_exceptions
+      tags: ["j_ap_dna_datamart_refresh_etl_framework_customer_pl","transformation"]      
