tv_grp_spend model

--- a/models/india/inditg_integration/lidar/_sources_inditg_integration__lidar.yml
+++ b/models/india/inditg_integration/lidar/_sources_inditg_integration__lidar.yml
@@ -30,4 +30,5 @@ sources:
     tables:
     - name: sdl_lidar_ff_other_paid_media
     - name: sdl_lidar_ff_tv_spends
+    - name: sdl_lidar_ff_tv_grp_spends
       
