--- a/models/china/chnitg_integration/sellout/_sources_chnitg_integration__sellout.yml
+++ b/models/china/chnitg_integration/sellout/_sources_chnitg_integration__sellout.yml
@@ -19,3 +19,12 @@ sources:
             config:
                 store_failures: true
                 schema: hcpwks_integration
+  - name: chnedw_integration
+    database: "{{ env_var('DBT_ENV_CHN_DB') }}"
+    schema: chnedw_integration
+    quoting:
+      database: false
+      schema: false
+      identifier: false
+    tables:
+    - name: dm_sellerbuyer
