JnJ_id length change

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -445,6 +445,8 @@ models:
       idnwks_integration:
         +materialized: table
         +schema: IDNWKS_INTEGRATION
+        wks_indonesia_noo_analysis:
+            +snowflake_warehouse: "{{ env_var('DBT_ENV_CORE_DB_MEDIUM_WH') }}"
       idnedw_access:
         +materialized: view
         +schema: IDNEDW_ACCESS
