Tags added for lidar ff

--- a/models/india/indedw_integration/lidar/_idnedw_integration__lidar.yml
+++ b/models/india/indedw_integration/lidar/_idnedw_integration__lidar.yml
@@ -26,3 +26,7 @@ models:
       alias: edw_vw_schemecube_lidar
       tags: ["india_views","transformation"]
 
+  - name: indedw_integration__vw_lidar_ff_other_paid_media_monthly_apac
+    config:
+      alias: vw_lidar_ff_other_paid_media_monthly_apac
+      tags: ["in_lidar_ff_refresh","transformation"]
