--- a/models/north_asia/ntaitg_integration/pos/_sources_ntaitg_integration__pos.yml
+++ b/models/north_asia/ntaitg_integration/pos/_sources_ntaitg_integration__pos.yml
@@ -327,6 +327,8 @@ sources:
       - name: itg_pos_str_sls_grp_map
       - name: itg_pos_prom_prc_map_temp
       - name: itg_pos_str_cd_sold_to_map_temp
+      # remove during deployment
+      - name: itg_query_parameters_temp
       
 
   - name: bwa_access
