--- a/models/hcp/hcpitg_integration/detailing_data/_hcpitg_integration__detailing_data.yml
+++ b/models/hcp/hcpitg_integration/detailing_data/_hcpitg_integration__detailing_data.yml
@@ -9,3 +9,7 @@ models:
     config:
       alias: itg_hcp360_in_ventasys_detailingdata
       tags: ["in_ventasys_load","ingestion"]
+  - name: hcpitg_integration__itg_hcp360_in_detailingdata_dcr_aggregated
+    config:
+      alias: itg_hcp360_in_ventasys_detailingdata_dcr_aggregated
+      tags: ["in_edetailing_dcr","transformation"]
