--- a/models/hcp/hcpitg_integration/detailing_data/_sources_hcpitg_integration__detailing_data.yml
+++ b/models/hcp/hcpitg_integration/detailing_data/_sources_hcpitg_integration__detailing_data.yml
@@ -11,3 +11,7 @@ sources:
     tables:
     - name: sdl_hcp360_in_ventasys_detailingdata
       tags: ["in_ventasys_load","ingestion"]
+    
+    - name: SDL_HCP360_IN_VENTASYS_EDETAILING_RAW
+    - name: SDL_HCP360_IN_VENTASYS_VA_PAGE_RAW
+  
