--- a/models/vietnam/vnmitg_integration/customer/_sources__vnmitg_integration__customer.yml
+++ b/models/vietnam/vnmitg_integration/customer/_sources__vnmitg_integration__customer.yml
@@ -13,6 +13,8 @@ sources:
         tags: ['vn_mt_pos_master','ingestion']
       - name: sdl_mds_vn_customer_segmentation
         tags: ["vn_mt_sellin_master","ingestion"]
+      - name: sdl_mds_vn_customer_segmentation_target
+        tags: ["vn_mt_sellin_master","ingestion"]  
       - name: sdl_vn_dms_customer_dim
         tags: ["vn_dms_master","ingestion"]
         tests:
