--- a/models/north_asia/ntaitg_integration/sales/_sources_ntaitg_integration__sales.yml
+++ b/models/north_asia/ntaitg_integration/sales/_sources_ntaitg_integration__sales.yml
@@ -116,3 +116,5 @@ sources:
     - name: itg_sales_store_master_temp
     - name: itg_sales_cust_prod_master_temp
     - name: itg_sls_grp_to_customer_mapping
+# remove during deployment
+    - name: itg_sls_grp_to_customer_mapping_temp    
