--- a/models/north_asia/ntaitg_integration/pos/_sources_ntaitg_integration__pos.yml
+++ b/models/north_asia/ntaitg_integration/pos/_sources_ntaitg_integration__pos.yml
@@ -308,6 +308,8 @@ sources:
         tags: ["j_kr_fert_material_wrapper","transformation"]
       - name: sdl_tw_pos_amart_inventory
       - name: sdl_tw_pos_amart_purchase
+      - name: sdl_tw_pos_cosmed_store_inventory
+      - name: sdl_tw_pos_cosmed_dc_inventory
 
   - name: ntaitg_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
