--- a/models/asp_regional/aspedw_integration/copa/_sources_aspitg_integration__exceptions.yml
+++ b/models/asp_regional/aspedw_integration/copa/_sources_aspitg_integration__exceptions.yml
@@ -9,4 +9,4 @@ sources:
       schema: false
       identifier: false
     tables:
-      - name: itg_custpl_excp_ctrl_temp
+      - name: itg_custpl_excp_ctrl
