Updated Call YML File

--- a/models/hcposea/hcposeitg_integration/call/_hcposeitg_integration_call.yml
+++ b/models/hcposea/hcposeitg_integration/call/_hcposeitg_integration_call.yml
@@ -24,7 +24,7 @@ models:
 
   - name: hcposeitg_integration__itg_call_sample
     config:
-      alias: itg_call_key_message
+      alias: itg_call_sample
       tags: ["iconnect_data_ingestion","ingestion"]      
 
   
