--- a/models/india/indedw_integration/lidar/_idnedw_integration__lidar.yml
+++ b/models/india/indedw_integration/lidar/_idnedw_integration__lidar.yml
@@ -40,3 +40,18 @@ models:
     config:
       alias: vw_lidar_ff_tv_grp_spends_global_monthly
       tags: ["in_lidar_ff_refresh","transformation"]
+
+  - name: indedw_integration__vw_lidar_ff_digital_micro_level_reach_india_monthly
+    config:
+      alias: vw_lidar_ff_digital_micro_level_reach_india_monthly
+      tags: ["in_lidar_ff_refresh","transformation"]
+  
+  - name: indedw_integration__vw_lidar_ff_digital_platform_level_reach_india_monthly
+    config:
+      alias: vw_lidar_ff_digital_platform_level_reach_india_monthly
+      tags: ["in_lidar_ff_refresh","transformation"]
+  
+  - name: indedw_integration__vw_lidar_ff_traditional_print_comp_spends_india_monthly
+    config:
+      alias: vw_lidar_ff_traditional_print_comp_spends_india_monthly
+      tags: ["in_lidar_ff_refresh","transformation"]
