--- a/models/thailand/thaitg_integration/mt/_sources_thaitg_integration__mt.yml
+++ b/models/thailand/thaitg_integration/mt/_sources_thaitg_integration__mt.yml
@@ -40,3 +40,21 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+    
+    - name: sdl_th_mt_watsons_pos
+      tags: ["tesco_mt_7_11_and_tops","ingestion"]
+      tests:
+        - test_null:
+              not_null_columns: ["product_id","year_month","year_week","store_format","store_segment"]
+              name: TRATBL_sdl_th_watsons_weekly_pos__null_test
+              config:
+                  store_failures: true
+                  schema: thawks_integration
+        - test_duplicate:
+              select_columns: ["product_id","year_month","year_week","store_format","store_segment"]
+              group_by_columns: ["product_id","year_month","year_week","store_format","store_segment"]
+              need_counts: no
+              name: TRATBL_sdl_th_watsons_weekly_pos__duplicate_test
+              config:
+                  store_failures: true
+                  schema: thawks_integration
