correcting the look up test for PH POS 711

--- a/models/philippines/phlitg_integration/pos/_sources_phlitg_integration__pos.yml
+++ b/models/philippines/phlitg_integration/pos/_sources_phlitg_integration__pos.yml
@@ -222,9 +222,9 @@ sources:
       - test_lookup:
             select_columns: ["mnth_id","ITEM_CD","STORE_NM"]
             column: "mnth_id,ITEM_CD"
-            lookup_column: "YEARMONTH,ITEM_CD"
-            lookup_table: "{{ ref('phlitg_integration__itg_ph_711_product_dim')}}"
-            lookup_filter: "YEARMONTH IN (SELECT DISTINCT MNTH_ID FROM {{source('phlsdl_raw','sdl_ph_pos_711')}})"
+            lookup_column: "MNTH_ID,ITEM_CD"
+            lookup_table: "{{ ref('phlitg_integration__itg_mds_ph_pos_product')}}"
+            lookup_filter: "MNTH_ID IN (SELECT DISTINCT MNTH_ID FROM {{source('phlsdl_raw','sdl_ph_pos_711')}}) and upper(cust_cd)='PSC' and active='Y'"
             name: TRATBL_sdl_ph_pos_711__lookup_test
             config:
               store_failures: true
